# tasker

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
src/tasker/: __init__.py  cli.py  manager.py
tests/: test_manager.py
